[package]
name = "fun-image-compositor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
image = "0.23"
web-sys = "0.3"
js-sys = "0.3"
rayon = "1.5.1"
wasm-bindgen-rayon = "0.3.0"


[lib]
crate-type = ["cdylib", "rlib"]
